modules/noosphere/taghmata/nixidy/manifests/prod/pocket-id/Namespace-pocket-id.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  name: pocket-id
